--- a/home.html
+++ b/home.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Motor Vehicles Department - Maharashtra</title>
     <link rel="stylesheet" href="styles.css">
-    
+    <meta charset="UTF-8">
 </head>
 <body>
+ 
 
     <!-- ========== HEADER SECTION ========== -->
     <header>
@@ -71,8 +71,11 @@
         <li class="dropdown">
             <a href="#">About Us ▼</a>
             <ul class="dropdown-menu">
-                <li><a href="#">Mission & Vision</a></li>
-                <li><a href="#">Organization Structure</a></li>
+                <li><a href="about/establisment.html">Establishment</a></li>
+                <li><a href="#" id="orgStructureLink">Organization Structure</a></li>
+                <li><a href="#" id="orgRevenueLink">Reveneu Information</a></li>
+                <li><a href="#" id="orgNumberofVehiclesLink">Number of Vehicles</a></li>
+                <li><a href="#" id="orgBCILink">Border Checkpoint Information</a></li>
             </ul>
         </li>
         <li class="dropdown">
@@ -195,7 +198,7 @@
     <p>© This is the official website of Motor Vehicles Department, Maharashtra. All Rights Reserved.</p>
     <p>Last Reviewed: 21-03-2025</p>
     <div class="footer-logo">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/e/e3/MahaIT.png" alt="MahaIT Logo">
+        <img src="images/Maha_IT_Logo.png" alt="MahaIT Logo">
     </div>
 </div>
 
