--- a/home.html
+++ b/home.html
@@ -81,7 +81,7 @@
         <li class="dropdown">
             <a href="#">Acts and Rules ▼</a>
             <ul class="dropdown-menu">
-                <li><a href="#">Motor Vehicle Act</a></li>
+                <li><a href="acts/deparment-mannual.html">Deparment Mannual</a></li>
                 <li><a href="#">Rules & Regulations</a></li>
             </ul>
         </li>
