add pdf links in about tab

--- a/home.html
+++ b/home.html
@@ -72,10 +72,10 @@
             <a href="#">About Us ▼</a>
             <ul class="dropdown-menu">
                 <li><a href="about/establisment.html">Establishment</a></li>
-                <li><a href="#" id="orgStructureLink">Organization Structure</a></li>
-                <li><a href="#" id="orgRevenueLink">Reveneu Information</a></li>
-                <li><a href="#" id="orgNumberofVehiclesLink">Number of Vehicles</a></li>
-                <li><a href="#" id="orgBCILink">Border Checkpoint Information</a></li>
+                <li><a href="Upload/Organization-Structure.pdf" target="_blank">Organization Structure</a></li>
+                <li><a href="Upload/SOP-for-Enlistig-AIS140-Certified-VLTD-Manufacturers-C.pdf" target="_blank">Revenue Information</a></li>
+                <li><a href="Upload/Number-of-vehicles.pdf" target="_blank">Number of Vehicles</a></li>
+                <li><a href="Upload/Border-checkpoint-information.pdf" target="_blank">Border Checkpoint Information</a></li>
             </ul>
         </li>
         <li class="dropdown">
